# nulis-notesApp

./: .convertcheck  .gitignore  .lscheck  README.md  capacitor.config.json  editor.html  index.html  package-lock.json  package.json  vite.config.js
src/: editor.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
